fix mob version

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
         <div class="best-chefs-cards">
             <div class="left">
-                <img src="./photo/chef.png" alt="chef-Image">                
+                <img src="./photo/chef.png" alt="chef-Image" class="chef-foto">                
             </div>             
         </div>        
      </section>
@@ -209,25 +209,25 @@
                 <img src="./photo/logo.png" alt="Logo" class="logo">
                 <p class="desk">On formed merits hunted unable merely by mr whence or.</p>
             </div>
-            <div class="grid2">
+            <div class="grid2" style="grid-column: 2;">
                 <h3>Home</h3>
                 <a href="#" class="btn foot">Company</a>
                 <a href="#" class="btn foot">News</a>
                 <a href="#" class="btn foot">Team</a>
             </div>
-            <div class="grid2">
+            <div class="grid2" style="grid-column: 3;">
                 <h3>About</h3>
                 <a href="#" class="btn foot">History</a>
                 <a href="#" class="btn foot">Service</a>
                 <a href="#" class="btn foot">Pricing</a>
             </div>
-            <div class="grid2">
+            <div class="grid2" style="grid-column: 4;">
                 <h3>Partner</h3>
                 <a href="#" class="btn foot">Business</a>
                 <a href="#" class="btn foot">Plan</a>
                 <a href="#" class="btn foot">Marketing</a>
             </div>
-            <div class="grid2">
+            <div class="grid2" style="grid-column: 5;">
                 <h3>Contact</h3>
                 <a href="#" class="btn foot">UI.desk</a>
                 <a href="#" class="btn foot">(465)954-8487</a>
